retrieveUnpackaged/objects/Salesforce_Accounts_Sample__c.object
<CustomObject>
    <description>This is a samples accounts with sample records</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Salesforce_Accounts_Sample</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Website__c</columns>
        <columns>Industry__c</columns>
        <columns>Billing_Street__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Billing_State__c</columns>
        <columns>Billing_Postal_Code__c</columns>
        <columns>Billing_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Salesforce_Accounts_Sample</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce_Accounts_Sample</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>